[tool.poetry]
name = "isat"
version = "0.1.0"
description = "The poetry project for ISaT."
authors = ["AssemblerEnjoyer <melnikovartemi@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
